--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
 		    <artifactId>poi</artifactId>
 		    <version>5.2.3</version>
 		</dependency>
+		 <!-- https://mvnrepository.com/artifact/jfree/jfreechart -->
+		<dependency>
+		    <groupId>jfree</groupId>
+		    <artifactId>jfreechart</artifactId>
+		    <version>1.0.13</version>
+		</dependency>
+		 
 
     </dependencies>
 
